--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Karol\'s Blog
+title: Karol Blog
 SEOTitle: Karol | Blog
 header-img: background.jpg
 email: k_wang12@163.com
