--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Karol Blog
 SEOTitle: Karol | Blog
-header-img: background.jpg
+header-img: img/post-bg-desk.jpg
 email: k_wang12@163.com
 description: "Thinking will not overcome fear but action will."
 keyword: "Karol, Karol Wang, Economics, Finance, Reading, Daily Life"
@@ -12,7 +12,7 @@ github_repo: "https://github.com/tinyflow/tinyflow.github.io.git" # you code rep
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "要勤于记诵"
-sidebar-avatar: touxiang.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -20,7 +20,7 @@ sidebar-avatar: touxiang.jpg      # use absolute URL, seeing it's used in both `
 RSS: false
 # weibo_username:     
 zhihu_username:     
-github_username:    karolwang
+github_username: karolwang
 
 
 
