--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Karol Blog
-SEOTitle: Karol | Blog
+SEOTitle: Karol Blog
 header-img: img/post-bg-desk.jpg
 email: k_wang12@163.com
 description: "Thinking will not overcome fear but action will."
