--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Karol
-SEOTitle: Karol
-header-img: img/post-bg-desk.jpg
+header-img: /img/post-bg-desk.jpg
 email: k_wang12@163.com
 description: "Thinking will not overcome fear but action will."
 keyword: "Karol, Karol Wang, Economics, Finance, Reading, Daily Life"
