--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Karol
-header-img: /img/post-bg-desk.jpg
+# Site settings
+title: BY Blog
+SEOTitle: 柏荧的博客 | BY Blog
 email: k_wang12@163.com
 description: "Thinking will not overcome fear but action will."
 keyword: "Karol, Karol Wang, Economics, Finance, Reading, Daily Life"
